--- a/Week3_A108260081_王灝.ipynb
+++ b/Week3_A108260081_王灝.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Week3 A108260081 王灝.ipynb",
+      "name": "Week3-A108260081-王灝.ipynb",
       "provenance": [],
       "include_colab_link": true
     },
@@ -26,33 +26,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dFTm9LB5OBhe",
+        "id": "mw3fuk2sOR_Q",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 131
+          "height": 34
         },
-        "outputId": "e0fc1b6b-b24a-4456-a4d1-5a78a6c2b33f"
+        "outputId": "60ae0798-0fe5-4e6a-a302-a3e5939504f4"
       },
       "source": [
-        "print(Hello World)"
+        "print(\"Hello World\")"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-10cb182148e3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    print(Hello World)\u001b[0m\n\u001b[0m                    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Hello World\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "mw3fuk2sOR_Q",
+        "id": "gCM_ydLJRVh3",
         "colab_type": "code",
         "colab": {}
       },
