--- a/Week6_A108260081_王灝.ipynb
+++ b/Week6_A108260081_王灝.ipynb
@@ -91,7 +91,7 @@
       "metadata": {
         "id": "6LIt7NevbIqJ",
         "colab_type": "code",
-        "outputId": "436fe150-9821-4cdc-fcd8-7a2a0006833c",
+        "outputId": "db2a6b21-b1e3-49d1-abbd-21069ecd654e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 51
@@ -99,10 +99,11 @@
       },
       "source": [
         "x=int(input('請輸入座號？'))\n",
-        "y=4\n",
-        "print('組別為',y)\n"
+        "y=x/5\n",
+        "z=int(y+1)\n",
+        "print('組別為',z)\n"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,21 +120,28 @@
       "metadata": {
         "id": "i5o7krTmeiQY",
         "colab_type": "code",
-        "outputId": "43101827-e0f7-48d4-c85d-45c2a005cadf",
+        "outputId": "e9afcc46-9f2f-4923-b739-9e2c99ec8be5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 51
         }
       },
       "source": [
-        "x=int(input('請輸入購買飲料的罐數？'))"
+        "x=int(input('請輸入購買飲料的罐數？'))\n",
+        "y=int(x/12)\n",
+        "z=int(x-y*12)\n",
+        "Py=y*200\n",
+        "Pz=z*20\n",
+        "P=Py+Pz\n",
+        "print('需花費',P)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "請輸入購買飲料的罐數？30\n"
+            "請輸入購買飲料的罐數？30\n",
+            "需花費 520\n"
           ],
           "name": "stdout"
         }
